--- a/2023ECE226Quiz/HW.tex
+++ b/2023ECE226Quiz/HW.tex
@@ -787,6 +787,11 @@
     Following the same logic, derive the Variance of $\Geomv(p)$.
 \end{problem}
 
+\begin{solution}
+    {Solution}
+    
+\end{solution}
+
 \begin{problem}
     {Group 2}
     Let $Y_1$ denote the weight (in tons) of a bulk item stocked by a supplier at the beginning of a week and suppose that $Y_1$ has a uniform distribution over the interval $0 \leq y_1 \leq 1$. Let $Y_2$ denote the amount (by weight) of this item sold by the supplier during the week and suppose that $Y_2$ has a uniform distribution over the interval $0 \leq y_2 \leq y_1$, where $y_1$ is a specific value of $Y_1$.
